--- a/app/src/main/res/layout/custom_playback_view.xml
+++ b/app/src/main/res/layout/custom_playback_view.xml
@@ -53,6 +53,14 @@
 
         </LinearLayout>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerviewIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/toolbar"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true" />
+
         <RelativeLayout
             android:id="@+id/progress"
             android:layout_width="match_parent"
@@ -98,8 +106,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="5dp"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:weightSum="8">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/unlock"
@@ -167,5 +174,17 @@
         </LinearLayout>
 
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/lock"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/ripple_circle"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_lock"
+        android:visibility="gone" />
 
 </RelativeLayout>
